--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
-    "lxml (>=5.3.0,<6.0.0)",
-    "fonttools (>=4.56.0,<5.0.0)"
+    "fonttools (>=4.56.0,<5.0.0)",
+    "ipython (>=8.32.0,<9.0.0)"
 ]
 
 
