--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "pydreamplet"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Marek Pilczuk",email = "user@mp76.pl"}
-]
+description = "A library for assembling SVGs from Python"
+authors = [{ name = "Marek Pilczuk", email = "user@mp76.pl" }]
+license = "MIT"
 readme = "README.md"
+keywords = ["svg", "graphics", "design"]
 requires-python = ">=3.12"
 dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
     "fonttools (>=4.56.0,<5.0.0)",
-    "ipython (>=8.32.0,<9.0.0)"
+    "ipython (>=8.32.0,<9.0.0)",
 ]
 
 
@@ -22,4 +22,3 @@ build-backend = "poetry.core.masonry.api"
 jupyter = "^1.1.1"
 ruff = "^0.9.5"
 pytest = "^8.3.4"
-
