--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pydreamplet"
-version = "0.1.3"
+version = "0.1.4"
 description = "A library for assembling SVGs from Python"
 authors = [{ name = "Marek Pilczuk", email = "user@mp76.pl" }]
 license = "MIT"
@@ -17,6 +17,10 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+packages = [{ include = "pydreamplet" }]
+include = ["pydreamplet/resources/*.svg"]
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
