--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,9 @@ nav:
       - reference/core/transformable.md
       - reference/core/g.md
       - reference/core/animate.md
+      - reference/core/circle.md
+      - reference/core/ellipse.md
+      - reference/core/rect.md
     - Math:
       - reference/math/vector.md
     - Noise:
@@ -63,6 +66,9 @@ theme:
       accent: orange
 extra_css:
   - stylesheets/extra.css
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 markdown_extensions:
   - attr_list
   - md_in_html
@@ -81,6 +87,8 @@ markdown_extensions:
       alternate_style: true
   - admonition
   - pymdownx.details
+  - pymdownx.arithmatex:
+      generic: true
 plugins:
   - search
   - blog
