--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: pyDreamplet
-site_url: https://marepilc.github.io/pydreamplet/
+site_url: https://marepilc.github.io/pydreamplet/docs/
 site_description: pyDreamplet is a Python library for SVG manipulation.
 site_author: Marek Pilczuk
 repo_url: https://github.com/marepilc/pydreamplet
