--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,8 @@ markdown_extensions:
 plugins:
   - search
   - blog
+  - privacy:
+      enabled: !ENV [CI, false]
 extra:
   analytics:
     provider: google
