--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
       - reference/core/ellipse.md
       - reference/core/polygon.md
       - reference/core/line.md
+      - reference/core/polyline.md
       - reference/core/path.md
       - reference/core/rect.md
       - reference/core/text.md
