--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,9 @@ nav:
       - reference/core/animate.md
       - reference/core/circle.md
       - reference/core/ellipse.md
+      - reference/core/polygon.md
       - reference/core/line.md
+      - reference/core/polyline.md
       - reference/core/path.md
       - reference/core/rect.md
       - reference/core/text.md
