--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ theme:
   features:
     - navigation.instant
     - navigation.tracking
-    - navigation.expand
+    # - navigation.expand
     - content.code.copy
     - search.suggest
   palette:
