--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,16 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Install test dependencies
+      - name: Install Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
+          curl -sSL https://install.python-poetry.org | python -
+          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Install project dependencies
+        run: poetry install
 
       - name: Run tests
-        run: pytest
+        run: poetry run pytest
 
   deploy:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
