--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,8 @@ nav:
     - Colors:
       - reference/colors/index.md
     - Markers:
-      - reference/markers/index.md
+      - reference/markers/marker.md
+      - reference/markers/predefined_markers.md
     - Scales:
       - reference/scales/linearscale.md
       - reference/scales/bandscale.md
@@ -75,14 +76,14 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
-        icon: material/weather-night
+        icon: material/white-balance-sunny
         name: Light mode
       primary: teal
       accent: orange
     - mediia: "(prefers-color-scheme: dark)"
       scheme: slate
       toggle:
-        icon: material/weather-sunny
+        icon: material/weather-night
         name: Dark mode
       primary: teal
       accent: orange
