--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - Getting started:
     - getting_started/index.md
     - getting_started/basics.md
+    - getting_started/vector_transformations.md
     - getting_started/tutorial.md
   - Reference:
     - Core:
