--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - Getting started:
     - getting_started/index.md
     - getting_started/basics.md
+    - getting_started/vector_transformations.md
     - getting_started/tutorial.md
   - Reference:
     - Core:
@@ -39,7 +40,8 @@ nav:
     - Colors:
       - reference/colors/index.md
     - Markers:
-      - reference/markers/index.md
+      - reference/markers/marker.md
+      - reference/markers/predefined_markers.md
     - Scales:
       - reference/scales/linearscale.md
       - reference/scales/bandscale.md
@@ -68,6 +70,7 @@ theme:
   features:
     - navigation.instant
     - navigation.tracking
+    - navigation.indexes
     - navigation.expand
     - content.code.copy
     - search.suggest
@@ -75,14 +78,14 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
-        icon: material/weather-night
+        icon: material/white-balance-sunny
         name: Light mode
       primary: teal
       accent: orange
     - mediia: "(prefers-color-scheme: dark)"
       scheme: slate
       toggle:
-        icon: material/weather-sunny
+        icon: material/weather-night
         name: Dark mode
       primary: teal
       accent: orange
