--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,14 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python -
-          echo "${HOME}/.local/bin" >> $GITHUB_PATH
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
 
       - name: Install project dependencies
-        run: poetry install
+        run: uv sync
 
       - name: Run tests
-        run: poetry run pytest
+        run: uv run pytest
 
   deploy:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
