--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,19 +11,26 @@ dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
     "fonttools (>=4.56.0,<5.0.0)",
     "ipython (>=8.32.0,<9.0.0)",
+    "ipykernel>=6.30.1",
 ]
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
-packages = [{ include = "pydreamplet" }]
-include = ["pydreamplet/resources/*.svg"]
+[tool.hatch.build.targets.wheel]
+packages = ["pydreamplet"]
 
-[tool.poetry.group.dev.dependencies]
-jupyter = "^1.1.1"
-ruff = "^0.9.5"
-pytest = "^8.3.4"
-mkdocs-material = "^9.6.4"
+[tool.hatch.build.targets.wheel.force-include]
+"pydreamplet/resources/hummingbird.svg" = "pydreamplet/resources/hummingbird.svg"
+"pydreamplet/resources/world_map_iso2.svg" = "pydreamplet/resources/world_map_iso2.svg"
+"pydreamplet/resources/world_map_iso3.svg" = "pydreamplet/resources/world_map_iso3.svg"
+
+[project.optional-dependencies]
+dev = [
+    "jupyter>=1.1.1",
+    "ruff>=0.9.5",
+    "pytest>=8.3.4",
+    "mkdocs-material>=9.6.4",
+]
