--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pydreamplet"
-version = "1.1.6"
+version = "1.1.7"
 description = "A versatile Python toolkit for programmatically generating, manipulating, and assembling scalable vector graphics (SVG) images."
 authors = [{ name = "Marek Pilczuk", email = "user@mp76.pl" }]
 license = "MIT"
@@ -28,9 +28,7 @@ packages = ["pydreamplet"]
 "pydreamplet/resources/world_map_iso3.svg" = "pydreamplet/resources/world_map_iso3.svg"
 
 [dependency-groups]
-dev = [
-    "pytest>=8.4.1",
-]
+dev = ["pytest>=8.4.1"]
 
 [project.optional-dependencies]
 dev = [
