--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,10 @@ packages = ["pydreamplet"]
 "pydreamplet/resources/world_map_iso2.svg" = "pydreamplet/resources/world_map_iso2.svg"
 "pydreamplet/resources/world_map_iso3.svg" = "pydreamplet/resources/world_map_iso3.svg"
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
     "jupyter>=1.1.1",
-    "mkdocs-material>=9.6.16",
+    "ruff>=0.9.5",
     "pytest>=8.4.1",
-    "ruff>=0.12.8",
+    "mkdocs-material>=9.6.4",
 ]
