--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pydreamplet"
-version = "1.1.9"
+version = "1.1.10"
 description = "A versatile Python toolkit for programmatically generating, manipulating, and assembling scalable vector graphics (SVG) images."
 authors = [{ name = "Marek Pilczuk", email = "user@mp76.pl" }]
 license = "MIT"
@@ -14,6 +14,12 @@ dependencies = [
     "ipykernel>=6.30.1",
 ]
 
+[project.urls]
+Documentation = "https://marepilc.github.io/pydreamplet/"
+Homepage = "https://marepilc.github.io/pydreamplet/"
+Repository = "https://github.com/marepilc/pydreamplet"
+"Source Code" = "https://github.com/marepilc/pydreamplet"
+
 
 [build-system]
 requires = ["hatchling"]
@@ -23,9 +29,13 @@ build-backend = "hatchling.build"
 packages = ["pydreamplet"]
 
 [tool.hatch.build.targets.wheel.force-include]
+"pydreamplet/py.typed" = "pydreamplet/py.typed"
 "pydreamplet/resources/hummingbird.svg" = "pydreamplet/resources/hummingbird.svg"
 "pydreamplet/resources/world_map_iso2.svg" = "pydreamplet/resources/world_map_iso2.svg"
 "pydreamplet/resources/world_map_iso3.svg" = "pydreamplet/resources/world_map_iso3.svg"
+
+[dependency-groups]
+dev = ["mypy>=1.18.2", "pytest>=8.4.1"]
 
 [project.optional-dependencies]
 dev = [
@@ -34,3 +44,6 @@ dev = [
     "pytest>=8.4.1",
     "mkdocs-material>=9.6.4",
 ]
+
+[tool.pyright]
+reportMissingTypeStubs = false
